# swordsmith

./: .gitignore  LICENSE  README.md  crossroad.py  crossroadtest.py  crossword.py  crosswordtest.py
cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cpp  swordsmith  test
cpp/Testing/Temporary/: CTestCostData.txt
cpp/include/: dfs.h  filler.h
cpp/src/: CMakeLists.txt  Makefile  american_crossword.cpp  american_crossword.h  cmake_install.cmake  crossword.cpp  crossword.h  dfs.cpp  dfs.h  filler.cpp  minlook.h  slot.cpp  slot.h  square.cpp  square.h  utils.h  word.cpp  word.h  wordlist.cpp  wordlist.h
cpp/swordsmith/: american_crossword.h  crossword.cpp  crossword.h  dfs.h  filler.cpp  filler.h  slot.cpp  slot.h  square.h
cpp/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test  tests_crossword.cpp  tests_slot.cpp  tests_square.cpp  tests_word  tests_word.cpp
crossroad/: __init__.py  crossroad.py
python/: README.md
python/swordsmith/: __init__.py  __main__.py  swordsmith.py
python/swordsmith/grid/: 15xcommon.txt  15xopen.txt  15xstairs.txt  7xopen.txt  9x.txt  jjacroxword.txt
python/tests/: test_americancrossword.py  test_swordsmith.py
python/tests/grids/: 4x.txt  9x.txt
python/tests/wordlist/: goodwords.db  spreadthewordlist.db
swordsmith/: swordsmith.py
tests/: test_crossroad.py  test_database.py  test_swordsmith.py
tests/grids/: 15xcommon.txt  15xopen.txt  6x.txt  7xopen.txt  9x.txt
tests/wordlist/: spreadthewordlist.db  spreadthewordlist.dict
